tests/cases/control-flow/errors/while-let-local-alias-enum-owner-widen-recheck.ari
enum Maybe {
  None,
  Some(i64),
}

fn main() -> i64 {
  let first: Maybe = Some(1);
  let item: Maybe = first;
  let token: own i64 = 7;
  while let Some(value) = item {
    let seen = value;
    drop token;
  }
  return 0;
}
